# ffmpeg-rs-experiments

./: .gitignore  Cargo.toml
src/: main.rs
