[package]
name = "krolld"
version = "0.1.0"
authors = ["Alexey Kharlamov <der@2-47.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg-next = { "path" = "/home/user/krolld/rust-ffmpeg" }
ffmpeg-sys-next = "4.3.3"
